--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
   },
   "dependencies": {
     "astro": "^5.0.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-astro"
+    ]
   }
 }
